Minor spacing fix in old landing

--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -19,9 +19,12 @@
     #value-prop{
       padding-bottom:50px;
       h1{
-        margin:20px 0 30px 0;
+        margin:20px 0 26px 0;
         font-size:55px;
         line-height:55px;
+      }
+      h3{
+        line-height: 28px;
       }
     }
     #screenshot{
@@ -37,7 +40,7 @@
       display:block;
     }
     .btn-primary{
-      margin-top:40px;
+      margin-top:32px;
     }
   }
   #benefits{
